--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.2",
   "description": "share docker machines with friendz",
   "bin": {
-    "machine-export": "./export.sh",
-    "machine-import": "./import.sh",
-    "machine-driverfix": "./driverfix.js"
+    "machine-export": "export.js",
+    "machine-import": "import.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,7 +26,10 @@
   },
   "homepage": "https://github.com/bhurlow/machine-share#readme",
   "dependencies": {
+    "fs.extra": "^1.3.2",
     "fstream": "^1.0.8",
+    "jszip": "^2.5.0",
+    "node-zip": "^1.1.1",
     "tar": "^2.2.1"
   }
 }
