--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs.extra": "^1.3.2",
     "fstream": "^1.0.8",
     "jszip": "^2.5.0",
+    "mkdirp": "^0.5.1",
     "node-zip": "^1.1.1",
     "tar": "^2.2.1"
   }
