--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "machine-share",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "share docker machines with friendz",
   "bin": {
     "machine-export": "export.js",
@@ -29,6 +29,7 @@
     "fs.extra": "^1.3.2",
     "fstream": "^1.0.8",
     "jszip": "^2.5.0",
+    "mkdirp": "^0.5.1",
     "node-zip": "^1.1.1",
     "tar": "^2.2.1"
   }
