--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "machine-share",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "share docker machines with friendz",
   "bin": {
     "machine-export": "export.js",
@@ -31,6 +31,7 @@
     "jszip": "^2.5.0",
     "mkdirp": "^0.5.1",
     "node-zip": "^1.1.1",
+    "slash": "^1.0.0",
     "tar": "^2.2.1"
   }
 }
