--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "machine-share",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "share docker machines with friendz",
   "bin": {
     "machine-export": "export.js",
@@ -42,5 +42,5 @@
     "eslint-plugin-standard": "^2.0.1",
     "pre-commit": "^1.1.3"
   },
-  "pre-commit": ["eslint"],
+  "pre-commit": ["eslint"]
 }
