--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jszip": "^2.5.0",
     "mkdirp": "^0.5.1",
     "node-zip": "^1.1.1",
+    "npm": "^6.2.0",
     "slash": "^1.0.0",
     "tar": "^2.2.1"
   },
@@ -42,5 +43,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "pre-commit": "^1.1.3"
   },
-  "pre-commit": ["eslint"]
+  "pre-commit": [
+    "eslint"
+  ]
 }
